# liquidation-bot

./: .env.example  .env.kovan  .env.mainnet  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .solhint.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  foundry.toml  hardhat.config.ts  package-lock.json  package.json  remappings.txt  requirements.txt  slither.config.json  tsconfig.json
.changeset/: cargo.js  config.json  flat-camels-repeat.md  flat-hotels-add.md  many-apricots-travel.md  smooth-buckets-end.md
.github/: CODEOWNERS
.github/workflows/: build-and-deploy.yaml  build.yaml  deploy-goerli.yaml  deploy-rinkeby.yaml  deploy.yaml  goerli.yaml  mainnet.yaml  release.yaml
contracts/: Liquidator.sol
deploy/: Liquidator.ts
deployments/goerli/: Liquidator.json
deployments/mainnet/: Liquidator.json
deployments/optimism/: Liquidator.json
deployments/optimism-goerli/: Liquidator.json
deployments/rinkeby/: Liquidator.json  UniswapV3Router.json
lib/abi/: Lido.json  LidoOracle.json
src/: account.rs  config.rs  debounce.rs  errors.rs  exactly_events.rs  fixed_point_math.rs  generate_abi.rs  liquidation.rs  main.rs  market.rs  network.rs  protocol.rs
src/bindings/: address_provider.rs  exactly_events.rs  fixed_lender_events.rs  mod.rs  multicall_2.rs  previewer.rs
src/config/: config.rs
src/credit_service/: account.rs  borrower.rs  credit_account.rs  credit_filter.rs  credit_manager.rs  exactly_oracle.rs  fixed_lender.rs  market.rs  mod.rs  service.rs
src/path_finder/: service.rs
src/price_oracle/: oracle.rs
src/protocol/: account.rs  config.rs  exactly_events.rs  fixed_point_math.rs  liquidation.rs  market.rs  mod.rs  protocol.rs
src/terminator_service/: terminator.rs
src/token_service/: service.rs
test/: Liquidator.spec.ts  Liquidator.t.sol
