[package]
name = "liq-bot"
version = "0.1.12"
license = "MIT"
authors = ["Rodrigo Bronzelle <bronzelle@gmail.com>", "danilo neves cruz <cruzdanilo@gmail.com>"]
edition = "2021"
default-run = "liq-bot"

[features]
liquidation-stats = []
complete-compare = []

[dependencies]
cacache = "11.3.0"
dotenv = "0.15.0"
ethers = { version = "2.0.0", features = ["ws", "rustls"] }
eyre = "0.6.8"
futures = "0.3.26"
log = { version = "0.4.17", features = ["std"] }
pin-project-lite = "0.2.9"
pretty_env_logger = "0.4.0"
sentry = { version = "0.30.0", features = ["log", "debug-images"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
