[package]
name = "liq-bot"
version = "0.1.19"
license = "MIT"
authors = [
    "Rodrigo Bronzelle <bronzelle@gmail.com>",
    "danilo neves cruz <cruzdanilo@gmail.com>",
]
edition = "2021"
default-run = "liq-bot"

[features]
liquidation-stats = []
complete-compare = []

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0.10", features = ["ws", "rustls"] }
eyre = "0.6.8"
futures = "0.3.28"
hex = "0.4.3"
log = { version = "0.4.20", features = ["std"] }
pin-project-lite = "0.2.13"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
sentry = { version = "0.31.7", features = ["log", "debug-images"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
url = "2.4.1"
